fix footer scroll issue on mobile

--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -25,10 +25,12 @@ html {
     }
 
     .footer-active &{
-		height: 100vh;
+      @include media('>desktop') {
+        height: 100vh;
         margin: 0;
-		border: none;
-		border-radius: 0;
+        border: none;
+        border-radius: 0;
+      }
     }
 }
 
